--- a/package.json
+++ b/package.json
@@ -11,18 +11,30 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
+    "expo-barcode-scanner": "~11.3.0",
     "expo-image-picker": "^13.1.1",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^9.8.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-custom-qr-codes-expo": "^2.2.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
-    "react-native-web": "0.17.7"
+    "react-native-svg": "^12.3.0",
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
+    "thunk": "^0.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
