--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-custom-qr-codes-expo": "^2.2.0",
+    "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-loading-spinner-overlay": "^3.0.0",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
@@ -33,8 +34,7 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.1",
-    "thunk": "^0.0.1"
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
